force-app/main/default/objects/ES_Task__c/ES_Task__c.object-meta.xml
<CustomObject>
    <description>An activity that has been assigned to a User.</description>
    <label>ES Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>