force-app/main/default/objects/ES_Task__c/fields/Assigned_To1__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ES_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>