force-app/main/default/objects/ES_Task__c/fields/Inspection_Id__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Id__c</fullName>
    <formula>CASESAFEID(Phase__r.Inspection__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Id</label>
    <type>Text</type>
</CustomField>