force-app/main/default/objects/ES_Task__c/fields/Inspection_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Inspection__c/&quot; &amp; Phase__r.Inspection__c &amp; &quot;/view&quot;, Phase__r.Inspection__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Name</label>
    <type>Text</type>
</CustomField>