force-app/main/default/objects/ES_Task__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <formula>Phase__r.Inspection__r.IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTemplate?</label>
    <type>Checkbox</type>
</CustomField>