force-app/main/default/objects/ES_Task__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ES_Project__c/&quot; &amp; Phase__r.Project__c &amp; &quot;/view&quot;, Phase__r.Project__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>