force-app/main/default/objects/ES_Task__c/listViews/My_Open_Tasks_2.listView-meta.xml
<ListView>
    <fullName>My_Open_Tasks_2</fullName>
    <columns>Inspection_Name__c</columns>
    <columns>NAME</columns>
    <columns>Percentage_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Task__c</field>
        <operation>equals</operation>
        <value>me</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,On Hold</value>
    </filters>
    <filters>
        <field>IsTemplate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Tasks</label>
</ListView>